<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_team_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/team_number"
        android:textStyle="bold"
        android:textSize="75dp"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/climber_strap_installation_difficulty"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_group_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/very_small">

                    <RadioButton
                        android:id="@+id/radio_one"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_one"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_two"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_two"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_three"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_three"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_four"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_four"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_five"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_five"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />
                </RadioGroup>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_group_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/very_small">

                    <RadioButton
                        android:id="@+id/radio_six"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_six"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_seven"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_seven"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_eight"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_eight"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_nine"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_nine"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radio_ten"
                        style="@style/radio_btns"
                        android:text="@string/radio_btn_ten"
                        android:gravity="center"
                        android:onClick="onRadioButtonClicked" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/et_subjective_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="25dp"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_border"
        android:layout_margin="@dimen/very_small"
        android:hint="@string/climber_installation_notes" />

    <Button
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/btn_save_button"
        android:text="@string/save"
        android:textSize="40dp"
        android:layout_margin="@dimen/very_small" />
</LinearLayout>
