<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight=".7"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/top_picture_type"-->
<!--            android:text="@string/picture_type_four"-->
<!--            style="@style/tv_pictures_taken" />-->

<!--        <Button-->
<!--            android:id="@+id/front_picture_type"-->
<!--            android:text="@string/picture_type_five"-->
<!--            style="@style/tv_pictures_taken" />-->

<!--        <Button-->
<!--            android:id="@+id/side_picture_type"-->
<!--            android:text="@string/picture_type_six"-->
<!--            style="@style/tv_pictures_taken" />-->

<!--        <Button-->
<!--            android:id="@+id/isometric_picture_type"-->
<!--            android:text="@string/picture_type_seven"-->
<!--            style="@style/tv_pictures_taken" />-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/full_robot_picture_type"
            android:text="@string/picture_type_one"
            style="@style/tv_pictures_taken" />

        <Button
            android:id="@+id/front_picture_type"
            android:text="@string/picture_type_two"
            style="@style/tv_pictures_taken" />

        <Button
            android:id="@+id/side_picture_type"
            android:text="@string/picture_type_three"
            style="@style/tv_pictures_taken" />

    </LinearLayout>

    <TextureView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/capture_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/camera_button"
            android:layout_weight="1"
            android:scaleType="fitCenter" />

    </LinearLayout>
</LinearLayout>
